CSS bug in #chat-submit

--- a/public/chat.html
+++ b/public/chat.html
@@ -75,7 +75,7 @@
         background-position: center;
     }
     @supports (background-image: url('/start-button.webp')) {
-        #chat-submit textarea.waiting::after {
+        #chat-submit textarea.waiting {
             background-image: url("/start-button.webp");
         }
     }
