--- a/public/chat.html
+++ b/public/chat.html
@@ -153,7 +153,9 @@
     if (window.fullWindowHash !== window.location.hash) {
         resetChat(false);
         adminConversationUuid = window.fullWindowHash.split("/")[2];
-        localStorage.setItem("adminConversationUuid", adminConversationUuid);
+        if (adminConversationUuid) {
+            localStorage.setItem("adminConversationUuid", adminConversationUuid);
+        }
     }
 
     if (adminConversationUuid) {
