--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
     </style>
 </head>
 <body>
-    <!-- Menu button (start button)-->
-    <div class="start-button" id="start-button">
-        <div class="start-button-icon" title="Start Here">☰</div>
+    <div class="tasks" id="tasks">
+        <!-- Menu button (start button)-->
+        <div class="start-button" id="start-button">
+            <div class="start-button-icon" title="Start Here">☰</div>
+        </div>
     </div>
-
-    <div class="tasks" id="tasks"></div>
 
     <!-- Menu -->
     <div class="menu" id="menu">
         <div class="menu-item" onclick="openPage('welcome', 'Welcome', '👋');">Welcome</div>
         <div class="menu-item" onclick="openPage('intro', 'Introduction', '🧠');">Introduction</div>
         <div class="menu-item" onclick="openPage('resume', 'Resume', '📜');">Resume</div>
+        <div class="menu-item" onclick="openPage('chat', 'Chat', '💬');">Chat with Me</div>
         <div class="menu-separator"></div>
         <div class="menu-item" onclick="toggleMode();">Toggle Mode</div>
         <div class="menu-separator"></div>
