Changed Introduction to Intro

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Menu -->
     <div class="menu" id="menu">
         <div class="menu-item" onclick="openPage('welcome', 'Welcome', '👋');">Welcome</div>
-        <div class="menu-item" onclick="openPage('intro', 'Introduction', '🧠');">Introduction</div>
+        <div class="menu-item" onclick="openPage('intro', 'Intro', '🧠');">Intro</div>
         <div class="menu-item" onclick="openPage('resume', 'Resume', '📜');">Resume</div>
         <div class="menu-item" onclick="openPage('chat', 'Chat', '💬');">Chat with Me</div>
         <div class="menu-separator"></div>
