--- a/login.html
+++ b/login.html
@@ -5,8 +5,10 @@
   </head>
   <body>
     <script type="module">
-        import { ENV_VARS } from '/src/env.js';
-        window.location.href=`https://auth.${ENV_VARS.DOMAIN_NAME}/oauth2/authorize?identity_provider=Google&redirect_uri=https://${ENV_VARS.DOMAIN_NAME}/callback.html&response_type=CODE&client_id=${ENV_VARS.COGNITO_CLIENT_ID}&scope=email%20openid%20profile`
+      import { envVars } from '/src/env.js';
+      envVars().then((ENV_VARS) => {
+        window.location.href=`https://auth.${ENV_VARS.DOMAIN_NAME}/oauth2/authorize?identity_provider=Google&redirect_uri=https://${ENV_VARS.DOMAIN_NAME}/callback.html&response_type=CODE&client_id=${ENV_VARS.COGNITO_CLIENT_ID}&scope=email%20openid%20profile`;
+      }).catch(console.error);
     </script>
   </body>
 </html>
